cmake_minimum_required(VERSION 3.7)
project(asm)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        libft/argn.c
        libft/cast_duble2.c
        libft/caststr_a.c
        libft/caststra.c
        libft/ceil_floar.c
        libft/format.c
        libft/ft_accur.c
        libft/ft_accur_digits.c
        libft/ft_apostroph.c
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_casr_doubl.c
        libft/ft_cast_dig2.c
        libft/ft_cast_digit.c
        libft/ft_cast_g.c
        libft/ft_cast_size.c
        libft/ft_cast_str.c
        libft/ft_casta.c
        libft/ft_castb.c
        libft/ft_caststr_a.c
        libft/ft_caststr_e.c
        libft/ft_color.c
        libft/ft_getstr.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isnegativ.c
        libft/ft_isprint.c
        libft/ft_isspace.c
        libft/ft_itoa.c
        libft/ft_itoa_base.c
        libft/ft_len_int.c
        libft/ft_ln_w.c
        libft/ft_lst_len.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memcpy_rev.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_nb_words.c
        libft/ft_print.c
        libft/ft_print_wchar.c
        libft/ft_printf.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_specifiers.c
        libft/ft_str_duble.c
        libft/ft_strcasr_p.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strndup.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnjoin.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_struct_format.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_width.c
        libft/get_next_line.c
        libft/itoa.c
        libft/libft.h
        libft/pars.c
        " search_availability_label.c"
        asm.h
        coding_byte.c
        ft_argument.c
        ft_compiler.c
        ft_instruction.c
        ft_size_program.c
        main.c
        my_errormeneger.c
        name_and_coment.c
        op.h
        serch_label.c
        translation_into_bytcode.c
        valid_direct.c
        valid_indir.c
        valid_registr.c
        write_program.c ft_dell_all.c)

add_executable(asm ${SOURCE_FILES})